<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingHorizontal="24dp">

    <!-- Greeting Text with Animation -->
    <TextView
        android:id="@+id/greeting_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_welcome_greeting"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        android:alpha="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/greeting_text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_welcome_greeting_en"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        android:alpha="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greeting_text_1"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/welcome_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_welcome_desc"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:alpha="0"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greeting_text_2" />

</androidx.constraintlayout.widget.ConstraintLayout>
